@@ -78,6 +78,7 @@ Template for new versions:
 - ``dfhack.items.getReadableDescription()``: easy API for getting a human-readable item description with useful annotations and information (like tattered markers or who is in a cage)
 - ``Items::createItem``: now returns a list of item pointers rather than a single ID, moved creator parameter to beginning, added growth_print and no_floor parameters at end
 - ``World::getAdventurer``: returns current adventurer unit
+- ``World::ReadPauseState``: now returns true when the game is effectively paused due to a large panel obscuring the map
 
 ## Lua
 - ``dfhack.internal.setClipboardTextCp437Multiline``: for copying multiline text to the system clipboard
